--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
 .forceCode/
-.sfdx/
+.sfdx
 .vscode/
 build.properties
 force.json
 sfdx-project.json
+retrievedPackage.zip
+srcRetrieved/
