--- a/build.properties.dist
+++ b/build.properties.dist
@@ -7,6 +7,7 @@ sf.username = <username>
 sf.password = <password>
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
 sf.pkgName = src/package.xml
+sf.retrievedPackageZipFile = retrievedPackage.zip
 #sf.zipFile = <Insert path of the zipfile to be retrieved>
 #sf.metadataType = <Insert metadata type name for which listMetadata or bulkRetrieve operations are to be performed>
 
