--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
 
   <!-- Retrieve metadata for all the packages Unpackaged -->
   <target name="retrieveUnpackaged">
+    <delete dir="srcRetrieved" failonerror="false"/>
     <mkdir dir="srcRetrieved"/>
     <sf:retrieve username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="srcRetrieved" unpackaged="${sf.pkgName}"/>
   </target>
@@ -61,7 +62,7 @@
   <target name="restoreRetrievedPackage">
     <delete file="${sf.retrievedPackageZipFile}"/>
     <zip destfile="${sf.retrievedPackageZipFile}" update="true">
-      <fileset dir="src/" includes="**/*"/>
+      <fileset dir="srcRetrieved/" includes="**/*"/>
     </zip>
     <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" zipFile="${sf.retrievedPackageZipFile}" rollbackOnError="true"/>
   </target>
