--- a/src/package.xml
+++ b/src/package.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>SellWizard</members>
+        <members>SWStep1</members>
+        <members>SWStep2</members>
+        <members>SWStep3</members>
         <name>AuraDefinitionBundle</name>
     </types>
     <version>44.0</version>
